Trying to fix navigation overlap on homepage with soapbox.

--- a/_scss/bbg/navigation/_menus.scss
+++ b/_scss/bbg/navigation/_menus.scss
@@ -405,7 +405,9 @@ body:not(.home) {
 
 
 
-
+.bbg__navigation__pagination {
+	@include clearfix();
+}
 
 
 
